--- a/index.html
+++ b/index.html
@@ -9,14 +9,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap link -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- style.css -->
     <link rel="stylesheet" href="style.css">
-    <title>bootstrap1</title>
+    <title>bootstrap</title>
 </head>
 <body>
     <h1>hello everyone</h1>
+    <div class="d-flex mt-5 mx-5 p-2 justify-content-around">
+        <div class="border border-5 border-success  w-25">
+            <img class="img-fluid" src="image/bg4.png" alt="">
+            <h2> bed</h2>
+            <p>price:9.99$</p>
+        </div>
+        <div class="border border-5 border-primary  w-25">
+            <img class="img-fluid" src="image/sofa1.jpg" alt="">
+            <h2> sofa</h2>
+            <p>price:9.99$</p>
+        </div>
+    </div>
+
+<h2>for responsive 5 tips</h2>
+<ol>
+    <li>container</li>
+    <li>row</li>
+    <li>columns</li>
+    <li>breakpoints</li>
+    <li>12 columns with breakpoints</li>
+</ol>
+
+<!-- start -->
+<div>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia labore aspernatur repellat ipsam repudiandae magni voluptates? Perspiciatis cumque tenetur similique ex rem a facilis ab quas, assumenda nulla reprehenderit consectetur?
+
+</div>
+<hr >
+<div class="container-fluid">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolorem quibusdam unde vitae blanditiis sed corporis, nulla quam ea perspiciatis aliquam, provident labore maiores quas dignissimos odit hic deleniti ipsam?
+</div>
+
+<!-- form with validation -->
+
+
+
+
     <!-- js script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script> -->
 </body>
 </html>
